# Lite-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.CN.md  README.EN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: docs.py  router.py
app/api/routes/: external.py  health.py
app/core/: cache.py  config.py  database.py  exceptions.py  http.py  logging.py  request_context.py  security.py
app/models/: weather.py
app/schemas/: common.py  external.py  health.py
app/services/: external_api.py
docs/: API.md  DESIGN.md  TESTING.md
tests/: test_app.py
