[project]
name = "standard-fastapi-backend"
version = "1.0.0"
description = "A standardized FastAPI backend template for RESTful APIs with external API integration."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.122.0",
  "httpx==0.28.1",
  "pydantic-settings==2.11.0",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
