[project]
name = "standard-fastapi-backend"
version = "1.0.0"
description = "A standardized FastAPI backend template for RESTful APIs with external API integration."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiosqlite==0.21.0",
  "fastapi==0.122.0",
  "httpx==0.28.1",
  "pydantic-settings==2.11.0",
  "redis==6.4.0",
  "sqlmodel==0.0.24",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.18.2",
  "pre-commit==4.3.0",
  "pytest==8.4.2",
  "ruff==0.13.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
